--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="contact-info">
 			<h1>Noe Sancen</h1>
-			<p>Michigan | nsancen@umich.edu</p>
+			<p>Michigan | noesancen1@gmail.com</p>
 		</div>
 	</div>
 
